  loaded by #load, and the running toplevel.
- #trace on mutually-recursive functions was broken, works again.

Libraries:
- Match_failure and Assert_failure exceptions now report
  (file, line, column), instead of (file, starting char, ending char).
- Module Arg: added Set_*, Symbol.
- Module Scanf: %n and %N formats to count characters / items read so far;
    assorted bug fixes.

Runtime system:
- output_value/input_value: fixed bug with large blocks (>= 4 Mwords)
  output on a 64-bit platform and incorrectly read back on a 32-bit
  platform.

The Dynlink library:
- By default, dynamically-loaded code now has access to all
  modules defined by the program; new functions Dynlink.allow_only
  and Dynlink.prohibit for access control.
- Fixed Dynlink problem with files generated with ocamlc -pack.

The Str library:
- Reimplemented regexp matching engine, now less buggy, faster, and LGPL
  instead of GPL.

Emacs mode:
- Added file caml-types.el to interactively display the type information
  saved by option -dtypes.


Objective Caml 3.06:
--------------------

Type-checking:
- Apply value restriction to polymorphic record fields.

Run-time system:
- Fixed GC bug affecting lazy values.

Both compilers:
- Added option "-version" to print just the version number.
- Fixed wrong dependencies in .cmi generated with the -pack option.

Native-code compiler:
- Fixed wrong return value for inline bigarray assignments.

Libraries:
- Unix.getsockopt: make sure result is a valid boolean.

Tools:
- ocamlbrowser: improved error reporting; small Win32 fixes.

Windows ports:
- Fixed two problems with the Mingw port under Cygwin 1.3.


Objective Caml 3.05:
--------------------

Language features:
- Support for polymorphic methods and record fields.
- Allows _ separators in integer and float literals, e.g. 1_000_000.

Type-checker:
- New flag -principal to enforce principality of type inference.
- Fixed subtle typing bug with higher-order functors.